--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xingnuxt-starter",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "This is a full function starter pack for beginner that utilize various of standard technologies out of the box. Made with ❤️ by Nidexingg",
   "author": "Chandara H. Wei",
   "license": "MIT",
@@ -37,9 +37,9 @@
     "@nuxtjs/tailwindcss": "6.12.2",
     "@vite-pwa/nuxt": "0.10.6",
     "nuxt": "^3.14.1592",
-    "nuxt-og-image": "^4.0.0",
-    "vue": "latest",
-    "vue-router": "latest",
+    "nuxt-og-image": "^4.0.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue-sonner": "^1.3.0"
   },
   "devDependencies": {
